	  
	  However, (P owl:inverseOf P) is not processed by AG, which seem to be a bug. I've reported
	  this to the AG people.
	  
	  [1] http://www.franz.com/agraph/allegrograph/doc/reasoner-tutorial.html
	  [2] http://www.slideshare.net/ontotext/two-reasonable-views-to-the-web-of-linked-data (slide 11)
	  
	  
2010-08-24   1.9.95.alpha
	- AdminDispatcher: added rules for the SKOS namespace "http://www.w3.org/2004/02/skos/core#"
	  (ie. along with rules to the previous "http://www.w3.org/2008/05/skos#").
	
	
2010-08-18   1.9.95.alpha
	- Added org.mmisw.ont.vocabulary.Vine20071128 vocabulary, old namespace:
	     http://marinemetadata.org/mmiws/20071128/vine#
	     
2010-08-17   1.9.95.alpha
	- Added org.mmisw.ont.vocabulary.Vine vocabulary.
	  URI: http://mmisw.org/ont/mmi/vine  
	  Actual vocab created in onts/vine/vine.owl (with Protege) and registered at ORR.
	
	
2010-07-24
	- just generated the misc, mmiuri, and vocabulary libraries.
	    
2010-06-29   1.9.8.alpha    
Note: syncing version with Ont and orr modules especially because Ont now uses Jena 2.6.3
and associated libraries.

	Upgrading Jena library to 2.6.3:
	As a general approach, I'm removing all the "old" libraries that have a corresponding JAR in the
	new version of Jena, and then using the ones coming with Jena:
	
	- Removed "old" jars from base_war/WEB_INF/lib/ associated with Jena 2.5.6 that have versions 
	  in the new Jena:
		-rw-r--r--  1 carueda  staff  1203860 Apr 29  2009 xercesImpl.jar
		-rw-r--r--  1 carueda  staff  1485980 Apr 29  2009 jenatest.jar
		-rw-r--r--  1 carueda  staff  2216624 Apr 29  2009 jena.jar
		-rw-r--r--  1 carueda  staff   143146 Apr 29  2009 iri.jar
		-rw-r--r--  1 carueda  staff  3147374 Apr 29  2009 icu4j_3_4.jar
		-rw-r--r--  1 carueda  staff  1296938 Apr 29  2009 arq.jar
		-rw-r--r--  1 carueda  staff   391834 Apr 29  2009 log4j-1.2.15.jar
		-rw-r--r--  1 carueda  staff   121070 Apr 29  2009 junit.jar
	